<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/customBackground"
    android:padding="8dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowOrderPreserved="false"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/bmi"
            style="@style/CommonButton"
            android:text="@string/menu_bmi"
            app:icon="@drawable/ic_menu_bmi" />

        <Button
            android:id="@+id/simpleCalc"
            style="@style/CommonButton"
            android:text="@string/simpleCalculator"
            app:icon="@drawable/calculate" />

        <Button
            android:id="@+id/camera"
            style="@style/CommonButton"
            android:text="@string/menu_camera"
            app:icon="@drawable/ic_menu_camera" />

        <Button
            android:id="@+id/discount"
            style="@style/CommonButton"
            android:text="@string/discountCalc"
            app:icon="@drawable/ic_menu_discount" />

        <Button
            android:id="@+id/gallery"
            style="@style/CommonButton"
            android:text="@string/menu_gallery"
            app:icon="@drawable/ic_menu_gallery" />

        <Button
            android:id="@+id/openBrowser"
            style="@style/CommonButton"
            android:text="@string/openBrowser"
            app:icon="@drawable/world" />

        <Button
            android:id="@+id/shortCodes"
            style="@style/CommonButton"
            android:text="@string/short_codes"
            app:icon="@drawable/phone" />


        <Button
            android:id="@+id/toDo"
            style="@style/CommonButton"
            android:text="@string/todo"
            app:icon="@drawable/clipboard" />

        <Button
            android:id="@+id/webApp"
            style="@style/CommonButton"
            android:text="@string/webapp"
            app:icon="@drawable/world" />

        <Button
            android:id="@+id/exitBtn"
            style="@style/CommonButton"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:backgroundTint="@color/black" />



        <!--        <Button-->
        <!--            android:id="@+id/studentReg"-->
        <!--            style="@style/CommonButton"-->
        <!--            android:text="@string/registration"-->
        <!--            app:icon="@drawable/register" />-->


        <!--        <Button-->
        <!--            android:id="@+id/powerConsumption"-->
        <!--            style="@style/CommonButton"-->
        <!--            android:text="@string/powerCalc"-->
        <!--            app:icon="@drawable/bolt" />-->

    </GridLayout>
</ScrollView>
