<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/customBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="41dp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/solution_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="textEnd"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/result_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/default_result"
            android:textAlignment="textEnd"
            android:textSize="50sp" />

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_c"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/button_clear"
                    android:textColor="@color/DelftBlue"
                    android:textSize="32sp"
                    app:cornerRadius="36dp" />

                <Button
                    android:id="@+id/button_open_bracket"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:backgroundTint="?attr/colorOnPrimary"
                    android:text="@string/button_open_bracket"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="32sp"
                    app:cornerRadius="36dp"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/button_close_bracket"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:backgroundTint="?attr/colorOnPrimary"
                    android:text="@string/button_close_bracket"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="32sp"
                    app:cornerRadius="36dp"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/button_divide"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:backgroundTint="?attr/colorOnPrimary"
                    android:text="@string/button_divide"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="32sp"
                    app:cornerRadius="36dp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_7"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:text="@string/button_7"
                    android:textColor="@color/DelftBlue"
                    android:textSize="32sp"
                    app:cornerRadius="36dp" />

                <Button
                    android:id="@+id/button_8"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:text="@string/button_8"
                    android:textColor="@color/DelftBlue"
                    android:textSize="32sp"
                    app:cornerRadius="36dp" />

                <Button
                    android:id="@+id/button_9"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:text="@string/button_9"
                    android:textColor="@color/DelftBlue"
                    android:textSize="32sp"
                    app:cornerRadius="36dp" />

                <Button
                    android:id="@+id/button_multiply"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:backgroundTint="?attr/colorOnPrimary"
                    android:text="@string/button_multiply"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="32sp"
                    app:cornerRadius="36dp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_4"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:text="@string/button_4"
                    android:textColor="@color/DelftBlue"
                    android:textSize="32sp"
                    app:cornerRadius="36dp" />

                <Button
                    android:id="@+id/button_5"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:text="@string/button_5"
                    android:textColor="@color/DelftBlue"
                    android:textSize="32sp"
                    app:cornerRadius="36dp" />

                <Button
                    android:id="@+id/button_6"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:text="@string/button_6"
                    android:textColor="@color/DelftBlue"
                    android:textSize="32sp"
                    app:cornerRadius="36dp"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/button_plus"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:backgroundTint="?attr/colorOnPrimary"
                    android:text="@string/button_plus"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="32sp"
                    app:cornerRadius="36dp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_1"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:text="@string/button_1"
                    android:textColor="@color/DelftBlue"
                    android:textSize="32sp"
                    app:cornerRadius="36dp" />

                <Button
                    android:id="@+id/button_2"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:text="@string/button_2"
                    android:textColor="@color/DelftBlue"
                    android:textSize="32sp"
                    app:cornerRadius="36dp" />

                <Button
                    android:id="@+id/button_3"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:text="@string/button_3"
                    android:textColor="@color/DelftBlue"
                    android:textSize="32sp"
                    app:cornerRadius="36dp" />

                <Button
                    android:id="@+id/button_minus"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:backgroundTint="?attr/colorOnPrimary"
                    android:text="@string/button_minus"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="32sp"
                    app:cornerRadius="36dp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_ac"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/button_ac"
                    android:textColor="@color/DelftBlue"
                    android:textSize="22sp"
                    app:cornerRadius="36dp" />

                <Button
                    android:id="@+id/button_0"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:text="@string/button_0"
                    android:textColor="@color/DelftBlue"
                    android:textSize="32sp"
                    app:cornerRadius="36dp"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:id="@+id/button_dot"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:text="@string/button_dot"
                    android:textColor="@color/DelftBlue"
                    android:textSize="32sp"
                    app:cornerRadius="36dp" />

                <Button
                    android:id="@+id/button_equals"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:backgroundTint="?attr/colorOnPrimary"
                    android:text="@string/button_equals"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="32sp"
                    app:cornerRadius="36dp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>